docs(tooling): fix dangling javadocs and dead {@link} refs in ToolingBlockEntities
Two dangling javadocs (a docstring above another docstring, attached to nothing):
- `applyRetainedNamesFilter` doc was sitting above `resolveStaticMeshTransformer`.
  Moved to its method at line 835.
- `popIntForBranch` doc was sitting above `isForwardJump`. Swapped order so
  each method has its correct docstring.

Three dead `{@link}` references:
- `requireStack` javadoc cited `{@link #popInt} / {@link #popFloat}` -
  those bare-pop helpers don't exist; only `popIntWithDiagnostics` and
  `popFloatWithDiagnostics` do. Updated.
- `popIntWithDiagnostics` opening sentence was `{@link #popInt} with a
  NonLiteralMarker check...` - same dead ref. Rephrased.
- `ModelPartPolygonFace` enum javadoc cited
  `{@link BlockFace#defaultUv(int[], float[], float, float, boolean)}`
  - that 5-arg overload doesn't exist (BlockFace only has `(Box)` and
  `(Vector2f, Vector3f)` now). Switched to `{@code}` form since Vector2f
  isn't imported here.

One factually-wrong comment on the Mth.cos handler:
- Old: `{@code -2 + cos(0.2042) * 10}` - mixed the tail X constant with the
  Y axis cos formula.
- New: `6.9 + Mth.cos(0.20420352F) * 10 for Y, -0.5 + Mth.sin(0.20420352F) *
  10 for Z` matching vanilla `WitherBossModel.createBodyLayer` exactly.
  Also dropped a stray `<p>` HTML tag inside a `//` line-comment.

Audit: 0 dangling javadocs and 0 dead inside-file `{@link}` refs remaining.